# EOGLLVoxelTest

./: CMakeLists.txt  main.c
assets/shaders/: crosshair.vert  cube.frag  cube.vert
